Fix: The blank space issue on tablets on iOS was fixed for Safari, but not Chrome. I'll try -moz-available now.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -398,6 +398,7 @@ footer {
     background-size: cover;
     min-height: 75vh;
     min-height: -webkit-fill-available;
+    min-height: -moz-available;
     grid-auto-flow: column;
     margin-bottom: 3vh;
     line-height: 1.8;
